@@ -100,21 +100,25 @@ class Monitor:
                     self.log.error("Plugin %s doesn't provide its required configuration options" % plugin_name)
                     self.shutdown()
 
-                plugins_optional[plugin_name] = {
-                    'distant_url' : str,
-                    'ssl_cert' : str,
-                    'ssl_key' : str,
-                    'importer_retry_timeout' : int,
-                    'max_parallel_checks' : int,
-                    'max_checks_queue' : int,
-                    'check_poll' : int,
-                    'check_timeout' : int,
-                    'result_threshold' : int,
-                    'limit_group' : str,
-                    'limit_check' : str,
-                    'limit_commit' : int,
-                    }
-                plugins_optional[plugin_name].update(plugin_attrs.Plugin.optional)
+                try:
+                    plugins_optional[plugin_name] = {
+                        'distant_url' : str,
+                        'ssl_cert' : str,
+                        'ssl_key' : str,
+                        'importer_retry_timeout' : int,
+                        'max_parallel_checks' : int,
+                        'max_checks_queue' : int,
+                        'check_poll' : int,
+                        'check_timeout' : int,
+                        'result_threshold' : int,
+                        'limit_group' : str,
+                        'limit_check' : str,
+                        'limit_commit' : int,
+                        }
+                    plugins_optional[plugin_name].update(plugin_attrs.Plugin.optional)
+                except AttributeError:
+                    self.log.error("Plugin %s doesn't provide its optional configuration options" % plugin_name)
+                    self.shutdown()
 
                 plugin_options = {}
                 for key, value in options.iteritems():
